# RustOS-2.0

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: acpi.rs  ap_trampoline.asm  display.rs  gdt.rs  idt.rs  lib.rs  main.rs  pci.rs  serial.rs  smp.rs  testing.rs  writer.rs
kernel/src/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/mem/: frame_allocator.rs  heap.rs  mod.rs
kernel/src/memory/: frame_allocator.rs  heap.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  spawner.rs  waker.rs
kernel_macro/: Cargo.toml
kernel_macro/src/: lib.rs
src/: main.rs
tinypci/: Cargo.toml
tinypci/src/: enums.rs  lib.rs
