[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "5.0.0"
linked_list_allocator = "0.10.5"
bootloader_api = "0.11.4"
bootloader-x86_64-common = "0.11.4"
conquer-once = { version = "0.4.0", default-features = false }
noto-sans-mono-bitmap = "0.2.0"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.3.0"
log = { version = "0.4.20", default-features = false }
x2apic = "0.4.2"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3.28", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.28", default-features = false, features = ["alloc"] }
hashbrown = "0.14.0"
tinypci = { path = "../tinypci", default-features = false }
